...
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(vertical = 8.dp)
            )

            Button(
                modifier = Modifier.testTag("login_button"),
                onClick = {
                    keyboardController?.hide()
                    viewModel.login(emailState.value, passwordState.value)
                },
                enabled = isButtonEnabled
            ) {
...
